--- a/Lab1_Fetching_APIs/public/index.html
+++ b/Lab1_Fetching_APIs/public/index.html
@@ -29,7 +29,7 @@
         <p>Select an API</p>
     </section>
     
-    <script src="sketch.js"></script>
+    <script src="controller.js"></script>
 </body>
 
 </html>
